--- a/style.css
+++ b/style.css
@@ -1,96 +1,45 @@
 *{
-    padding: 0;
     margin: 0;
-    text-decoration: none;
+    padding: 0;
+}
+
+.navbar{
+    background: #8cc540;
+    color: #009BD3;
+    padding: 10px;
+    font-family: sans-serif;
+}
+.navbar img{
+    height: 40px;
+    float: left;
+    margin-right: 20px; ;
+}
+.manu-right{
+    text-align: right;
+}
+ul li{
+    display: inline-block;
+    margin: 20px;
     list-style: none;
 }
-body{
-    font-family: monospace;
-}
-nav{
-    height: 80px;
-    width: 100%;
-    background: #34495e;
-}
-label.logo{
-    font-size: 35px;
-    font-weight: bold;
-    color: white;
-    padding: 0 100px;
-    line-height: 80px;
-}
-nav ul{
-    float: right;
-    margin-right: 40px;
-}
-nav li{
-    display: inline-block;
-    margin: 0 8px;
-    line-height: 80px;
-}
-nav a{
-    color: white;
-    font-size: 18px;
-    text-transform: uppercase;
-    border: 1px solid transparent;
-    padding: 7px 10px;
-    border-radius: 3px;
-}
-a.active,a:hover{
-    border: 1px solid white;
-    transition: 0.5s ; 
-}
-nav #icon{
-    color: white;
-    font-size: 30px;
-    line-height: 80px;
-    float: right;
-    margin-right: 40px;
+
+span{
+    margin:  0 20px;
+    font-size: 28px;
     cursor: pointer;
     display: none;
 }
-@media (max-width:1048px){
-    lable.logo{
-        font-size: 32px;
-        padding-left: 60px;
-    }
-    nav ul{
-        margin-right: 20px;
-    }
-    nav a{
-        font-size: 17px;
-    }
-}
-@media (max-width: 909px){
-    nav #icon{
+@media only screen and (max-width:700px){
+    span 
+    {
         display: block;
     }
-    nav ul{
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: #2f3640;
-        top: 80px;
-        left: 0;
-        text-align: center;
-        transition: all 0.5s;
-    }
-    nav li{
+    ul li
+    {
         display: block;
-        margin: 50px 0;
-        line-height: 30px;
     }
-    nav a{
-        font-size: 20px;
+    ul 
+    {
+        display: none;
     }
-    a.active,a:hover{
-        border: none;
-        color: #3498db;
-    }
-}
-
-section{
-    background: url(images/shiva.jpeg) no-repeat;
-    background-size: cover;
-    height: calc(150vh);
 }
